--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 FLASK_APP=app
 FLASK_ENV=development
 SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u90818734902139489230
-DATABASE_URL=postgresql://accord_user:a@localhost/accord
+DATABASE_URL=postgresql://username:password@localhost/accord
