--- a/Pipfile
+++ b/Pipfile
@@ -23,7 +23,7 @@ SQLAlchemy = "==1.3.19"
 Werkzeug = "==1.0.1"
 WTForms = "==2.3.3"
 Flask-JWT-Extended = "==3.24.1"
-email-validator = "*"
+email-validator = "==1.1.2"
 Flask-Migrate = "==2.5.3"
 Flask-Login = "==0.5.0"
 alembic = "==1.4.3"
@@ -31,10 +31,17 @@ python-dateutil = "==2.8.1"
 python-editor = "==1.0.4"
 Mako = "==1.1.3"
 PyJWT = "==1.7.1"
-faker = "*"
-dumper = "*"
-flask-socketio = "*"
+faker = "==8.2.1"
+dumper = "==1.2.0"
+flask-socketio = "==5.0.3"
 eventlet = "==0.30.2"
+bidict = "==0.21.2"
+dnspython = "==1.16.0"
+greenlet = "==1.1.0"
+idna = "==3.1"
+python-engineio = "==4.2.0"
+python-socketio = "==5.3.0"
+text-unidecode = "==1.3"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
