--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ FLASK_APP=app
 FLASK_ENV=development
 SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u90818734902139489230
 DATABASE_URL=postgresql://username:password@localhost/accord
+REACT_APP_BASE_URL="react app url"
+SCHEMA="schema_name_goes_here"
